update with tolist